@@ -1,8 +1,13 @@
 -server
--Xmx2G
+# Container limit = 1g (1024m) → heap 75% ~ 768M (tránh OOM kill)
+-Xmx768M
+-Xms768M
 -XX:+UseG1GC
--XX:G1HeapRegionSize=32M
+-XX:G1HeapRegionSize=16M
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
+-XX:ReservedCodeCacheSize=128M
+-XX:GCTimeRatio=9
+-Djdk.attach.allowAttachSelf=true
